<resources>
    <string name="app_name">Neighbours</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="have_account">HAVE ACCOUNT</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>

    <!--    Property Paths-->
    <string name="p_email" translatable="false">email</string>
    <string name="p_first_name" translatable="false">firstname</string>
    <string name="p_last_name" translatable="false">lastname</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="top_bar_title" translatable="false">Neighbours</string>
    <string name="add_home">Add Home</string>
    <string name="settings">Settings</string>
    <string name="more" translatable="false">More</string>
    <string name="edit" translatable="false">EDIT</string>
    <string name="home_fab_content_desc">Create new home</string>
    <string name="subtitle_description">Your address <b>❯</b></string>
    <string name="home_bottom_sheet_title">Yours Address</string>
    <string name="image_button_content_desc_sheet_item">Edit Address</string>
    <string name="add_new_address">Add new address</string>
    <string name="done">Done</string>
    <string name="navigation_back" translatable="false">navigation back</string>
    <string name="user_position" translatable="false">User position</string>
    <string name="searching">Searching…</string>
    <string name="templates">Templates</string>
    <string name="templates_fab_content_desc">Add new template</string>
    <string name="for_all_template">For all</string>
    <string name="performers">Performers</string>
    <string name="title" translatable="false">Title</string>
    <string name="fragment_add_template_title">Add new template</string>
    <string name="fragment_edit_template_title">Edit template</string>
    <string name="cancel">Cancel</string>
    <string name="add_performers">Add performers</string>
    <string name="select_days">Select days pattern</string>
    <string name="action">Action</string>
    <string name="delete_template_message">Are you sure you want to delete this template?</string>
    <string name="logout">Logout</string>
    <string name="scan" translatable="false">Qr Scan</string>
    <string name="general" translatable="false">General</string>
    <string name="theme">Your theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="qr_code_add_place_member_desc">Use this qr-code to add neighbors to your current house</string>
</resources>