<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.udevapp.neighbours.presentation.ui.fragments.main.home.bottom_sheet_dialog.HomeBottomSheetViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:behavior_fitToContents="false"
        app:behavior_hideable="true"
        app:behavior_peekHeight="80dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetDragHandleView">


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:loading="@{viewmodel.loading}" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/home_bottom_sheet_title" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/address_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/fragment_home_bottom_sheet_item" />


        <Button
            android:id="@+id/add_new_address"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_address"
            android:textAlignment="textStart"
            android:textSize="12sp"
            app:icon="@drawable/icon_add"
            app:strokeWidth="0dp" />


        <Button
            android:layout_margin="16dp"
            android:id="@+id/action_change_selected_address"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>